--- a/projects10/style.css
+++ b/projects10/style.css
@@ -3,11 +3,14 @@
     src: url(fonts/Righteous-Regular.ttf);
 }
 html{
-    --fristColor: #eee;
-    --secondaryColor:blue;
+    --fristColor: #e32929;
+    --secondaryColor:rgb(0, 0, 0);
+}
+body{
+    background-color: black;
 }
 .cardDiv{
-    box-shadow: 0 0 12px black;
+    box-shadow: 0 0 12px rgb(255, 255, 255);
     width: 80%;
     font-size: 20px;
     padding: 20px;
@@ -65,11 +68,11 @@ button{
     border-radius: 6px;
 }
 button:hover{
-    background-color: rgb(56, 56, 163);
+    background-color: rgb(17, 17, 21);
     cursor: grab;
 }
 button:active{
-    background-color: blue;
+    background-color: rgb(24, 24, 29);
     cursor: grabbing;
 
 }
@@ -92,7 +95,7 @@ button:active{
     right: 10px;
     height: 80px;
     z-index: 1;
-    color: var(--secondaryColor);
+    color: var(--fristColor);
     animation: 1s cubic-bezier(.6,-.28,.735,.045) infinite alternate forwards anim1
 
 
