--- a/prolects15/style.css
+++ b/prolects15/style.css
@@ -147,6 +147,70 @@ h1 i {
     margin-bottom: 20px;
     display: none;
 }
+#loginDiv div {
+    width: 100%;
+    text-align: center;
+    border: 2px solid darkblue;
+    padding: 40px 20px;
+    background-image: linear-gradient(white, aqua);
+    border-radius: 20px;
+}
+
+#loginDiv div button {
+    width: 80%;
+}
+
+#loginDiv div input {
+    padding: 10px 20px;
+    font-size: 20px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+#loginDiv #loginError {
+    font-size: 22px;
+    color: red;
+    margin-bottom: 20px;
+    display: none;
+}
+
+
+#signupDiv {
+    width: 80%;
+    max-width: 500px;
+    margin: auto;
+    height: 77vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+#signupDiv div {
+    width: 100%;
+    text-align: center;
+    border: 2px solid darkblue;
+    padding: 40px 20px;
+    background-image: linear-gradient(white, aqua);
+    border-radius: 20px;
+}
+
+#signupDiv div button {
+    width: 80%;
+}
+
+#signupDiv div input {
+    padding: 10px 20px;
+    font-size: 20px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+#signupDiv #loginError {
+    font-size: 22px;
+    color: red;
+    margin-bottom: 20px;
+    display: none;
+}
 
 #detailsDiv {
     margin: auto;
