--- a/prolects15/style.css
+++ b/prolects15/style.css
@@ -1,11 +1,14 @@
 html {
-    --main-color: #4855CD;
-    --hover-color: #2f3a9a;
+    --main-color: #051eff;
+    --hover-color: #051eff;
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
+}
+body{
+    background-color: black;
 }
 
 h1 {
@@ -33,19 +36,43 @@ h1 i {
 #bottomDiv #settingsDiv {
     background-color: var(--main-color);
     width: 50%;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid white;
-    transition: 0.5s;
+    border: 0px solid white;
+    transition: 0.6s;
+    border: 2px solid transparent;
+    background-repeat: no-repeat;
 }
 
 #bottomDiv #userDiv:hover,
 #bottomDiv #settingsDiv:hover {
-    cursor: pointer;
-    background-color: var(--hover-color);
+    background-color: transparent;
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+    cursor: grab;
+}
+#bottomDiv #userDiv:active,
+#bottomDiv #settingsDiv:active {
+    background-color: transparent;
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+    cursor: grabbing;
+}
+
+.modal-header {
+    background-color: black;
+    border: none;
+}
+.modal-body {
+    background-color: black;
+    border: none;
+}
+.modal-footer {
+    background-color: black;
+    border: none;
 }
 
 #addButton {
@@ -58,8 +85,11 @@ h1 i {
 }
 
 #addButton:hover {
-    cursor: pointer;
+    cursor: grab;
     color: var(--hover-color);
+}
+#addButton:active{
+    cursor: grabbing;
 }
 
 #zeroNotes {
@@ -74,20 +104,52 @@ h1 i {
 #zeroNotes img {
     width: 50%;
 }
-
+h4{
+    color: var(--main-color);
+}
+h3{
+    color:#051eff;
+}
 #noteInput {
     width: 100%;
     resize: none;
     outline-color: var(--main-color);
     font-size: 25px;
     padding: 10px;
+    background-color: black;
+    color: var(--hover-color);
+}
+.lol{
+    background-color: var(--main-color);
+        width:30%;
+        color: rgb(0, 0, 0);
+        font-size:23px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.6s;
+        border: 2px solid transparent;
+        background-repeat: no-repeat;
+        border-radius: 20px;
+}
+.lol:hover{
+        background-color: transparent;
+            border: 2px solid var(--main-color);
+            color: var(--main-color);
+            cursor: grab;
+}
+.lol:active{
+        background-color: transparent;
+            border: 2px solid var(--main-color);
+            color: var(--main-color);
+            cursor: grabbing;
 }
 
 #notesDiv div {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    background-color: #DDDFF5;
+    background-color: black;
     font-size: 25px;
     border-bottom: 2px solid var(--main-color);
 }
