--- a/projects15/style.css
+++ b/projects15/style.css
@@ -1,6 +1,6 @@
 html {
-    --main-color: #051eff;
-    --hover-color: #051eff;
+    --main-color: red;
+    --hover-color: red;
 }
 
 
@@ -10,10 +10,10 @@ html {
 }
 body{
     background-color: black;
-    color: #051eff;
+    color: red;
 }
 textarea{
-    color: #051eff;
+    color: red;
 }
 
 h1 {
@@ -123,7 +123,7 @@ h4{
     color: var(--main-color);
 }
 h3{
-    color:#051eff;
+    color:red;
 }
 #noteInput {
     width: 100%;
@@ -265,15 +265,15 @@ h3{
     width: 100%;
     border-radius: 10px;
     background-color: black;
-    color: #051eff;
+    color: red;
     border: none;
-    outline: #051eff;
+    outline: red;
 }
 
 
 #loginDiv #loginError {
     font-size: 22px;
-    color: #051eff;
+    color: red;
     margin-bottom: 20px;
     display: none;
 }
@@ -330,15 +330,15 @@ h3{
     width: 100%;
     border-radius: 10px;
     background-color: black;
-    color: #051eff;
+    color: red;
     border: none;
-    outline: #051eff;
+    outline: red;
 }
 
 
 #signup #signupError {
     font-size: 22px;
-    color: #051eff;
+    color: red;
     margin-bottom: 20px;
     display: none;
 }
@@ -357,7 +357,7 @@ h3{
 #detailsDiv div {
     text-align: center;
     padding: 50px;
-    border: 2px solid darkblue;
+    border: 2px solid darkred;
     border-radius: 20px;
 }
 
