--- a/projects17/style.css
+++ b/projects17/style.css
@@ -75,9 +75,55 @@ body{
 #mainDiv #resultDiv #canvasDiv{
     background-color: var(--third-color);
     border-radius: 20px;
-        display: flex;
+        display: none;
             justify-content: center;
             align-items: center;
             margin: auto;
             margin-top: 30px;
+            padding: 10px;
+}
+#mainDiv #resultDiv #qrText{
+
+    font-size: 35px;
+    color:var(--third-color);
+    font-family: 'Courier New', Courier, monospace;
+    margin-top: 20px;
+    width: 100%;
+    padding: 10px;
+    max-width: 600px;
+    text-align: center;
+    word-wrap: break-word;
+    text-wrap: wrap;
+}
+
+#mainDiv #dividerDiv{
+    width: 5px;
+    height: 60vh;
+    background-color: var(--third-color);
+    margin: 0 100px;
+    display: none;
+}
+
+@media (min-width: 1200px ){
+    
+
+    #mainDiv{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+        #mainDiv #dividerDiv {
+            display: block;
+        }
+        #mainDiv #inputDiv h1{
+            font-size: 80px;
+        }
+        #mainDiv #inputDiv input , #mainDiv #inputDiv button{
+            width:80% ;
+            padding: 30px;
+            font-size: 30px;
+        }
+
+
 }
